evolute.css
/* ... */
.actionRequired2-pa {
    font-weight: 600;
    text-align: center;
}

.ai-center {
    align-items: center;
}

#orderSearchBar{
    display: block !important
}

table#accountOverview{
    width: 90% !important;
    margin: 0 auto !important
}

.options:has(.width-100pct){
    width: 100% !important;
}

.options:has(.width-50pct){
    width: 50% !important;
}

.padding-10{
    padding: 10px;
}

.pcBody{
    display: flex;
    flex-direction: column;
    gap: 10px;
}

/************Menu item selected*************/

.dashboard #MainNavigation li.selected a,
.dashboard #SubNavigation.subtabs li.current a {
        color: var(--color-primary-light) !important;
        background-color: var(--bg-light) !important;
        font-weight: 600 !important;
    }

/************Menu item selected*************/

a#agreementLink {
    color: #00ade1 !important;
}

/*     home/leadstore bullets     */
ul.leadstore_bullets{
    list-style: inside;
}

.dashboard #accountMgmtContainer{
    display: flex;
    flex-direction: column;
    gap: 12px;
    width: 100%;
    margin: 6px;
}

.dashboard #accountMgmtContainer label{
    width: 100%;
}

.dashboard .grid_75_25 {
    display: grid;
    grid-template-columns: 3fr 1fr;
    gap: 20px;
}

.dashboard .submitButton{
    display: flex;
}

